# portal-sec-electricatiltil

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/app/: config.py  database.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_initial.py  0002_documentos_notificaciones.py
backend/app/core/: auth_basic.py  auth_jwt.py  email.py  email_templates.py  enums.py  logging_middleware.py  mapping.py  num_solicitud.py  security.py  storage.py
backend/app/models/: __init__.py  documento.py  notificacion_log.py  sec_credential.py  sec_request_log.py  solicitud.py  user.py
backend/app/routers/: admin_export.py  admin_solicitudes.py  admin_users.py  auth.py  documentos.py  public.py  sec_conexion.py  sec_factibilidad.py
backend/app/schemas/: auth.py  documento.py  sec_in.py  solicitud.py
backend/tests/: conftest.py  test_admin_y_publico.py  test_advance_documentos_export.py  test_sec_endpoints.py
frontend/: .dockerignore  .env.example  Dockerfile  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/components/: AdvanceForm.tsx  Badge.tsx  CompletarInformacion.tsx  DocumentList.tsx  FileUpload.tsx  LogoutButton.tsx  SolicitudDetailTabs.tsx  SolicitudEditForm.tsx  SolicitudForm.tsx  Spinner.tsx  TransicionEstadoForm.tsx  UsuariosTable.tsx
frontend/lib/: api.ts  assets.ts  auth.ts  enums.ts  schemas.ts
(+34 files in other folders)
